--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue-router": "^3.0.1",
     "element-ui": "^2.5.4",
     "axios": "^0.18.0",
-    "js-file-download": "^0.4.4"
+    "js-file-download": "^0.4.4",
+    "qs": "^6.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
